plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromExpectedAnnotation/common/common.kt
expect annotation class <!LINE_MARKER("descr='Has actuals in jvm module'")!>Ann<!>(
        val <!LINE_MARKER("descr='Has actuals in jvm module'")!>x<!>: Int,
        val <!LINE_MARKER("descr='Has actuals in jvm module'")!>y<!>: String
)
